Fixed the horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,7 @@
   line-height: 1.5;
 }
 
+body, html {
+  overflow-x: hidden;
+  width: 100%;
+}
